--- a/vignettes/lasR2.Rmd
+++ b/vignettes/lasR2.Rmd
@@ -34,7 +34,7 @@ In the following tutorial, the variable `f` refers to one or several file paths 
 
 ## Reader
 
-The `reader` stage must be the first stage of any pipeline. It takes as input the list of files to process. When creating a pipeline with only this stage, the files are read, but no computation is actually applied. The points are not even read. No result is returned.
+The `reader` stage must be the first stage of any pipeline. It takes as input the list of files to process. When creating a pipeline with only this stage, the header of the files are read, but no computation is actually applied. The points are not even read. No result is returned.
 
 ```{r, echo = F}
 f = paste0(system.file(package="lasR"), "/extdata/bcts")
@@ -90,8 +90,8 @@ We can also perform both triangulations in the same pipeline. The idea of `lasR`
 
 ```r
 read = reader(f)
-del1 = triangulate(filter = "-keep_class 2", ofile = tempfile(fileext = ".gpkg"))
-del2 = triangulate(filter = "-keep first", ofile = tempfile(fileext = ".gpkg"))
+del1 = triangulate(filter = keep_ground(), ofile = tempfile(fileext = ".gpkg"))
+del2 = triangulate(filter = keep_first(), ofile = tempfile(fileext = ".gpkg"))
 pipeline = read + del1 + del2
 ans = processor(pipeline)
 ```
@@ -102,15 +102,15 @@ Using `triangulate()` without any other stage in the pipeline is usually not ver
 
 `rasterize()` does exactly what users may expect from it and even more. There are three variations:
 
-1. Rasterize with predefined operators. The operators are optimized internally, making the operations as fast as possible, but the number of registered operators is low
+1. Rasterize with predefined operators. The operators are optimized internally, making the operations as fast as possible, but the number of registered operators is low.
 2. Rasterize by injecting a user-defined R expression. This is equivalent to `pixel_metrics()` from the package `lidR`. Any user-defined function can be mapped, making it extremely versatile but slower and limited in speed by the quality of the R code injected.
 3. Rasterize a Delaunay triangulation.
 
-With these variations, users can build a CHM, a DTM, a predictive model, or anything else. Let's build a DTM using a triangulation of the ground points and the `rasterize()` stage. In the following pipeline, the LAS files are read, points are loaded for each LAS file with a buffer, a Delaunay triangulation of the ground points is built, and then the triangulation is interpolated and rasterized. By default, `rasterize()` writes the raster in a temporary file, so the result is not discarded.
+With these variations, users can build a CHM, a DTM, a predictive model, or anything else. Let's build a DTM using a triangulation of the ground points and the `rasterize()` stage. In the following pipeline, the LAS files are read, points are loaded for each LAS file **with a buffer**, a Delaunay triangulation of the ground points is built, and then the triangulation is interpolated and rasterized. By default, `rasterize()` writes the raster in a temporary file, so the result is not discarded.
 
 ```{r rasterize}
 read = reader(f)
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 dtm = rasterize(1, del)
 pipeline = read + del + dtm
 ans = processor(pipeline)
@@ -119,11 +119,13 @@ ans
 
 Here, `processor()` returns a only a `SpatRaster` because `triangulate()` returns nothing (`NULL`). Therefore, the pipeline contains two elements, but only one returns something.
 
-```{r, fig.width=4, fig.height=4}
+```{r plotdtm, fig.height=3.5}
 terra::plot(ans, col = gray.colors(25,0,1), mar = c(1, 1, 1, 3))
 ```
 
-Notice that, contrary to the lidR package, there is usually no high-level function with names like `rasterize_terrain()`. Instead, `lasR` is made up of low-level functions that are more versatile but also more challenging to use. Let's build two CHMs: one based on the highest point per pixel with a resolution of 2 meters, and the second based on the triangulation of the first returns with a resolution of 50 cm.
+Notice that, contrary to the lidR package, there is usually no high-level function with names like `rasterize_terrain()`. Instead, `lasR` is made up of low-level functions that are more versatile but also more challenging to use. 
+
+Let's build two CHMs: one based on the highest point per pixel with a resolution of 2 meters, and the second based on the triangulation of the first returns with a resolution of 50 cm.
 
 In the following pipeline, we are using two variations of `rasterize()`: one capable of rasterizing a triangulation and the other capable of rasterizing the point cloud with a predefined operator (here `max`). The output is a named list with two `SpatRaster`.
 
@@ -133,7 +135,7 @@ f <- system.file("extdata", "Megaplot.las", package="lasR")
 
 ```{r rasterize2, fig.show="hold", fig.height=6,  out.width="50%"}
 read <- reader(f)
-del <- triangulate(filter = "-keep_first")
+del <- triangulate(filter = keep_first())
 chm1 <- rasterize(2, "max")
 chm2 <- rasterize(0.5, del)
 pipeline <- read + del + chm1 + chm2
@@ -160,7 +162,7 @@ terra::plot(ans, mar = c(1, 1, 1, 3), col = heat.colors(15))
 
 ## Transform with triangulation
 
-Another way to use Delaunay triangulation is to transform the point cloud. You can add or subtract the triangulation from the point cloud, effectively normalizing it. Unlike the `lidR` package, there is no high-level function with names like `normalize_points()`. Instead, `lasR` is composed of low-level functions that offer more versatility.
+Another way to use a Delaunay triangulation is to transform the point cloud. Users can add or subtract the triangulation from the point cloud, effectively normalizing it. Unlike the `lidR` package, there is no high-level function with names like `normalize_points()`. Instead, `lasR` is composed of low-level functions that offer more versatility.
 
 Let's normalize the point cloud using a triangulation of the ground points (meshed DTM).
 
@@ -172,7 +174,7 @@ f <- system.file("extdata", "Topography.las", package="lasR")
 
 ```{r twt, warning=FALSE}
 read = reader(f)
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 norm = transform_with_triangulation(del, "-")
 pipeline = read + del + norm
 ans = processor(pipeline)
@@ -183,11 +185,11 @@ ans
 For convenience this pipeline is pre-recorded in the package under the name `normalize()`.
 </blockquote>
 
-To obtain a meaningful output, it is necessary to chain another stage. Here the point cloud has been modified but then it is discarded. For instance, we can compute a Canopy Height Model (CHM) on the normalized point cloud. In the following pipeline, the first rasterization (`chm1`) is applied before normalization, while the second rasterization occurs after `transform_with_triangulation()`, thus being applied to the transformed point cloud.
+To obtain a meaningful output, it is necessary to chain another stage. Here the point cloud has been modified but then, it is discarded because we did nothing with it. For instance, we can compute a Canopy Height Model (CHM) on the normalized point cloud. In the following pipeline, the first rasterization (`chm1`) is applied before normalization, while the second rasterization occurs after `transform_with_triangulation()`, thus being applied to the transformed point cloud.
 
 ```{r twt2, warning=FALSE, fig.height=4, fig.width=8}
 read = reader(f)
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 norm = transform_with_triangulation(del, "-")
 chm1 = rasterize(2, "max")
 chm2 = rasterize(2, "max")
@@ -212,9 +214,9 @@ f = f[1:2]
 
 ```{r writelas, warning=FALSE}
 read = reader(f)
-write1 = write_las(paste0(tempdir(), "/*_ground.laz"), filter = "-keep_class 2")
+write1 = write_las(paste0(tempdir(), "/*_ground.laz"), filter = keep_ground())
 write2 = write_las(paste0(tempdir(), "/*_normalized.laz"), )
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 norm = transform_with_triangulation(del, "-")
 pipeline = read + write1 + del + norm + write2
 ans = processor(pipeline)
@@ -256,8 +258,11 @@ call = callback(meanz, expose = "xyz")
 ans = processor(read+call)
 ans
 ```
+Here the output is a `list` with two elements because we processed two files (`f` is not displayed in this document). The average Z elevation are respectively 809.08 and 13.27 in each file.
 
-Be mindful that, for a given LAS/LAZ file, the point cloud may contain more points than the original file if the file is loaded with a buffer. Further clarification on this matter will be provided later.
+<blockquote style="background-color: #fff3cd; border-left: 5px solid #ffc107; padding: 10px; font-size: 14px; border-radius: 5px;">
+Be mindful that, for a given LAS/LAZ file, the point cloud may contain more points than the original file **if the file is loaded with a buffer**. Further clarification on this matter will be provided later.
+</blockquote>
 
 The `callback` function is versatile and can also be employed to edit the point cloud. When the user-defined function returns a `data.frame` with the same number of rows as the original one, the function edits the underlying C++ dataset. This enables users to perform tasks such as assigning a class to a specific point. While physically removing points is not possible, users can flag points as `Withheld`. In such cases, these points will not be processed in subsequent stages
 
@@ -277,7 +282,11 @@ ans = processor(read+call)
 ans
 ```
 
-As observed, here, `callback` does not explicitly return anything; however, it edits the point cloud without producing a visible result. To generate an output, users must use `write_las()`. It's important to note that `write_las()` will **NOT** write the point number 13 which is flagged `withheld`.
+As observed, here, this time `callback` does not explicitly return anything; however, it edited the point cloud without internally. To generate an output, users must use another stage such as `write_las()`. It's important to note that `write_las()` will **NOT** write the point number 12 which is flagged `withheld`. Neither any subsequent stage will process it. The point is still in memory but is discarded.
+
+<blockquote style="background-color: #f8d7da; border-left: 5px solid #dc3545; padding: 10px; font-size: 14px; border-radius: 5px;">
+For memory and efficiency reasons, it is not possible to physically remove a point from the underlying memory in `lasR`. Instead, the points flagged as `withheld` will **never be processed**. One consequence of this, is that points flagged as withheld in a LAS/LAZ file **will not** be processed in `lasR`. This aligns with the intended purpose of the flag according to the LAS specification but may differ from the default behaviour of many software options on the market.
+</blockquote>
 
 Now, let's explore the capabilities of `callback` further. First, let's create a lidR-like `read_las()` function to expose the point cloud to R. In the following example, the user-defined function is employed to return the `data.frame` as is. When the user's function returns a `data.frame` with the same number of points as the original dataset, this updates the points at the C++ level. Here, we use `no_las_update = TRUE` to explicitly return the result.
 
@@ -325,7 +334,7 @@ f <- system.file("extdata", "MixedConifer.las", package="lasR")
 
 ```{r its}
 read = reader(f)
-del = triangulate(filter = "-keep_first")
+del = triangulate(filter = keep_first())
 chm = rasterize(0.5, del)
 chm2 = pit_fill(chm)
 seed = local_maximum(3)
@@ -344,10 +353,9 @@ plot(ans$local_maximum$geom, add = T, pch = 19, cex = 0.5)
 
 ## Buffer
 
-Point clouds are typically stored in multiple contiguous files. To avoid edge artifacts, each file must be loaded with extra points coming from neighbouring files. Everything is handled automatically, except for the `callback()` algorithm. In `callback()`, the point cloud is exposed as a `data.frame` with the buffer, providing the user-defined function with some spatial context. If `callback` is used to edit the points, everything is handled internally. However, if an R object is returned, it is the responsibility of the user to handle the buffer.
+Point clouds are typically stored in multiple contiguous files. To avoid edge artifacts, each file must be loaded with extra points coming from neighbouring files. Everything is handled automatically, except for the `callback()` stage. In `callback()`, the point cloud is exposed as a `data.frame` with the buffer, providing the user-defined function with some spatial context. If `callback` is used to edit the points, everything is handled internally. However, if an R object is returned, it is the responsibility of the user to handle the buffer.
 
-For example, in the following pipeline, we are processing two files, and `callback()` is used to count the number of points. The presence of `triangulate()` implies that each file will be loaded with a buffer. Consequently, counting the points in `callback()` returns more points than `summarise()` because `summarise()` knows how to deal with the buffer.
-
+For example, in the following pipeline, we are processing two files, and `callback()` is used to count the number of points. The presence of `triangulate()` implies that each file will be loaded with a buffer. Consequently, counting the points in `callback()` returns more points than `summarise()` because `summarise()` is an internal function that knows how to deal with the buffer.
 
 ```{r, echo = FALSE}
 f = paste0(system.file(package="lasR"), "/extdata/bcts")
@@ -358,7 +366,7 @@ f = f[1:2]
 ```{r buffer}
 count = function(data) { length(data$X) }
 read = reader(f)
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 npts = callback(count, expose = "x")
 sum = summarise()
 ans = processor(read + del + npts + sum)
@@ -386,7 +394,7 @@ count_buffer_aware = function(data) {
 }
 
 read = reader(f)
-del = triangulate(filter = "-keep_class 2")
+del = triangulate(filter = keep_ground())
 npts = callback(count_buffer_aware, expose = "b") # b for buffer
 sum = summarise()
 ans = processor(read + del + npts + sum)
@@ -476,7 +484,7 @@ These readers allow building a ground inventory pipeline, for example.
 
 ## Plot inventory
 
-This pipeline extracts a plot inventory using a shapefile from a non-normalized point cloud, normalizes each plot, computes metrics for each plot, and writes each normalized and non-normalized plot in separate files. Each circular plot is loaded with a buffer to perform a correct triangulation. The plots are exposed to R without the buffer using `drop_buffer = TRUE`.
+This pipeline extracts a plot inventory using a shapefile from a non-normalized point cloud, normalizes each plot, computes metrics for each plot, and writes each normalized and non-normalized plot in separate files. Each circular plot is **loaded with a buffer** to perform a correct triangulation. The plots are exposed to R without the buffer using `drop_buffer = TRUE`.
 
 ```{r inventory, eval=FALSE}
 ofiles_plot <- paste0(tempdir(), "/plot_*.las")
