suppress startup messages in vignettes

--- a/vignettes/lasR1.Rmd
+++ b/vignettes/lasR1.Rmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup, echo = F}
-library(lasR)
+suppressPackageStartupMessages(library(lasR))
 ```
 
 ## Rationnale for `lasR` vs. `lidR`
