--- a/vignettes/lasR4.Rmd
+++ b/vignettes/lasR4.Rmd
@@ -35,7 +35,7 @@ This vignette presents benchmarks for various tasks using `lidR` and `lasR`. The
 - **Date:** update 2024-02-07
 - **Version:** 
   - lidR 4.1.1
-  - lasR 0.1.0
+  - lasR 0.2.0
 
 ## Canopy Height Model
 
@@ -63,7 +63,8 @@ processor(pipeline)
 ### Result
 
 ```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", out.width="50%"}
-# 1 
+#1
+
 m_lasr = c(0, 93.38, 93.38, 93.38, 93.38, 93.38, 93.38, 93.38, 122.01, 122.01, 122.01, 122.01, 122.01, 122.01, 122.01, 122.53, 122.53, 122.53, 122.53, 122.53, 122.53, 141.60, 
 141.60, 141.60, 141.60, 141.60, 141.60, 141.60, 140.92, 149.46,0)
 t_lasr = (1:length(m_lasr)-1)*2/60
@@ -72,11 +73,13 @@ m_lidr = c(0,104.70, 342.79, 571.07, 793.16, 1028.55, 1388.56, 2027.17, 1888.13,
 2868.93, 2997.68, 2127.28, 0)
 t_lidr = (1:length(m_lidr)-1)*5/60
 
-m_lidr2 = c(0, 193.67, 351.17, 499.30, 648.55, 783.17, 931.17, 1079.79, 1132.39, 1197.64, 1972.39, 2222.19, 2372.32, 2521.19, 2690.99, 2839.99, 2946.35, 3068.06, 2392.09, 2670.97, 2818.85, 2967.72, 3137.86, 3293.99, 3370.11, 2619.88, 2307.91, 1989.16, 2128.16, 2286.00, 2433.63, 2579.13, 2656.12, 2723.62, 2594.85, 0)
+f = system.file("extdata/benchmarks", "lidR_test_1_FFGG-1009803.data", package = "lasR")
+m_lidr2 = read.table(f)$V1
 t_lidr2 = (1:length(m_lidr2)-1)*2/60
 
-m_lasr2 = c(0,203.04, 358.92, 358.92, 371.79, 371.79, 371.79, 372.04, 372.04, 391.29, 391.29, 391.29, 0)
-t_lasr2 = (1:length(m_lasr2)-1)*4/60
+f = system.file("extdata/benchmarks", "lasR_test_1_FFGG-1009803.data", package = "lasR")
+m_lasr2 = read.table(f)$V1
+t_lasr2 = (1:length(m_lasr2)-1)*2/60
 
 tmax = max(t_lidr, t_lasr, t_lidr2, t_lasr2)
 mmax = max(m_lidr, m_lasr, m_lidr2, m_lasr2)/1000
@@ -148,6 +151,7 @@ processor(pipeline)
 
 ```{r, warning=F, echo=-1, echo=FALSE, fig.show="hold", out.width="50%"}
 # 2
+
 m_lasr = c(0, 79.67, 93.66, 116.75, 133.85, 146.74, 165.05, 257.17, 455.17, 767.38, 833.30, 833.30, 833.30, 846.70, 854.83, 862.04, 869.00, 874.93, 874.93, 894.53, 853.06, 853.06, 
 863.89, 872.39, 889.12, 902.23, 618.84, 1002.46, 1013.65, 1013.65, 1022.16, 1041.49, 1049.07, 1055.26, 1061.45, 1061.45, 177.75, 0)
 t_lasr = (1:length(m_lasr)-1)*3/60
@@ -155,10 +159,12 @@ t_lasr = (1:length(m_lasr)-1)*3/60
 m_lidr = c(0,124.56, 356.59, 376.44, 966.76, 2048.83, 1790.97, 1790.97, 1754.86, 1754.86, 2457.66, 2169.17, 2169.17, 2170.71, 2304.78, 2654.14, 2172.81, 2195.75, 2170.75, 2231.33, 2579.38, 0)
 t_lidr = (1:length(m_lidr)-1)*10/60
 
-m_lidr2 = c(0, 139.30, 346.42, 356.80, 366.42, 372.17, 381.80, 387.30, 414.42, 748.34, 809.84, 890.09, 970.47, 1050.59, 1130.22, 1209.59, 1289.47, 1271.14, 1271.14, 781.42, 787.67, 794.42, 803.29, 811.79, 819.67, 765.35, 925.04, 1001.29, 1076.16, 1151.04, 1225.79, 1300.66, 1375.54, 1450.16, 1392.50, 1392.50, 896.18, 905.18, 919.43, 934.05, 940.18, 923.84, 1020.86, 1101.36, 1181.48, 1260.86, 1339.61, 1418.61, 1497.61, 1576.73, 1656.36, 1728.61, 1651.25, 1651.25, 1030.53, 1039.41, 1047.53, 1054.41, 1060.03, 1063.78, 1101.87, 1195.12, 1270.50, 1345.12, 1420.37, 1495.37, 1570.50, 1645.12, 1601.39, 1601.39, 0)
+f = system.file("extdata/benchmarks", "lidR_test_2_FFGG-1009803.data", package = "lasR")
+m_lidr2 = read.table(f)$V1
 t_lidr2 = (1:length(m_lidr2)-1)*2/60
 
-m_lasr2 = c(0,135.55, 351.30, 352.17, 361.67, 379.42, 391.05, 404.30, 421.05, 476.30, 581.40, 685.28, 789.28, 893.03, 996.03, 1098.78, 1084.58, 1084.58, 1084.58, 1096.08, 1102.83, 1111.33, 1118.58, 1126.21, 1126.21, 1126.21, 1126.21, 1126.21, 1126.21, 1145.71, 1104.28, 1104.28, 1117.41, 1127.53, 1140.16, 1151.41, 598.75, 703.62, 807.50, 909.62, 1012.50, 1115.25, 1217.87, 1314.37, 1264.08, 1264.08, 1264.08, 1278.83, 1285.83, 1291.46, 1296.58, 1303.08, 1303.08, 1303.08, 1303.08, 1303.08, 1303.08, 0)
+f = system.file("extdata/benchmarks", "lasR_test_2_FFGG-1009803.data", package = "lasR")
+m_lasr2 = read.table(f)$V1
 t_lasr2 = (1:length(m_lasr2)-1)*2/60
 
 tmax = max(t_lidr, t_lasr, t_lidr2, t_lasr2)
@@ -244,10 +250,12 @@ m_lidr = c(0, 104.86, 456.99, 802.07, 1116.71, 1765.46, 2116.21, 2502.28, 2276.5
 3523.44, 3733.16, 0)
 t_lidr = 1:length(m_lidr)*8/60
 
-m_lidr2 = c(0, 193.23, 497.98, 784.95, 1085.33, 1205.75, 2226.83, 2527.83, 2847.46, 2536.90, 2678.37, 2974.99, 3299.73, 2721.75, 1991.53, 2285.40, 2575.28, 2724.10, 2548.08, 3019.45, 3524.15, 3900.47, 2601.94, 3582.43, 4037.68, 4587.39, 4970.17, 2331.14, 3414.44, 3911.82, 4499.68, 4979.93, 3151.38, 3652.82, 4215.47, 4644.97, 4193.78, 3546.69, 3603.89, 3863.48, 4237.23, 3809.42, 1696.35, 1958.85, 2231.42, 2436.03, 2867.71, 3133.63, 3347.25, 2549.77, 2823.65, 3088.82, 3268.23, 3359.37, 0)
-t_lidr2 = 1:length(m_lidr2)*4/60
+f = system.file("extdata/benchmarks", "lidR_test_3_FFGG-1009803.data", package = "lasR")
+m_lidr2 = read.table(f)$V1
+t_lidr2 = 1:length(m_lidr2)*2/60
 
-m_lasr2 = c(0, 203.05, 355.17, 448.05, 625.42, 802.55, 979.14, 1157.14, 1332.77, 1482.14, 1488.77, 1527.14, 668.36, 668.48, 842.36, 981.61, 1120.61, 1260.98, 1400.61, 1515.23, 1551.98, 1577.36, 730.80, 778.80, 915.80, 1055.17, 1195.42, 1341.80, 1490.67, 1472.86, 1472.86, 712.91, 765.78, 904.41, 1044.28, 1180.66, 1318.28, 1453.91, 1598.78, 1633.03, 1633.03, 0)
+f = system.file("extdata/benchmarks", "lasR_test_3_FFGG-1009803.data", package = "lasR")
+m_lasr2 = read.table(f)$V1
 t_lasr2 = 1:length(m_lasr2)*2/60
 
 tmax = max(t_lidr, t_lasr, t_lidr2, t_lasr2)
